<resources>
    <string name="app_name">GuardianO</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_settings">Settings</string>
    <string name="plan_name">Plan name</string>
    <string name="text_schedule_title">Parenting Time Schedule</string>
    <string name="text_schedule_description">To help fill this section refer
    to your specific court approved parenting plan</string>
    <string name="text_school_schedule">School Schedule</string>
    <string name="text_school_age_question">Children under school-age?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="child_name">Child name</string>
    <string name="child_DOB">mm/dd/yyyy</string>
    <string name="text_use_same_question">Use same schedule as school-age?</string>
    <string name="add_child">Add another child</string>
    <string name="weekend">Weekend</string>
    <string name="drop_off_fragment">Drop off</string>
    <string name="pick_up_fragment">Pick up</string>
    <string name="text_default_time">12:00 AM</string>
    <string name="weekday">Weekday</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="title_activity_settings">Settings</string>
    <string name="next">Done</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

</resources>
